@@ -9,17 +9,22 @@
   <artifactId>jetty-client</artifactId>
   <name>Jetty :: Asynchronous HTTP Client</name>
   <url>http://www.eclipse.org/jetty</url>
+
   <properties>
     <bundle-symbolic-name>${project.groupId}.client</bundle-symbolic-name>
     <jetty.test.policy.loc>target/test-policy</jetty.test.policy.loc>
   </properties>
+
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.client=jetty.servlet.api --add-modules java.security.jgss --add-modules jetty.servlet.api --add-modules org.eclipse.jetty.jmx --add-modules org.slf4j
+            @{argLine} ${jetty.surefire.argLine}
+            --add-modules java.security.jgss
+            --add-modules org.eclipse.jetty.jmx
+            --add-modules org.slf4j
           </argLine>
         </configuration>
       </plugin>
@@ -140,6 +145,13 @@
       <groupId>org.apache.kerby</groupId>
       <artifactId>kerb-simplekdc</artifactId>
       <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- transitive dependency defined as a range and we don't want that -->
+    <dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>2.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
